--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,6 +1,6 @@
 name: Documentation Request
 description: Request new or updated documentation.
-title: "[Content]: "
+title: "[Content Request]: "
 body:
   - type: markdown
     attributes:
