--- a/.github/advanced-issue-labeler.yml
+++ b/.github/advanced-issue-labeler.yml
@@ -2,7 +2,9 @@
 # SPDX-License-Identifier: BUSL-1.1
 
 # Add a label to an issue based on the selected value of the Product drop down
-# in the issue form
+# in the issue form. "name" is the label, and "keys" is the value in the
+# bug-report and feature-request issue forms in the ISSUE_TEMPLATE directory.
+ 
 
 policy:
   - template: [ bug-report.yml, feature-request.yml]
