--- a/.github/advanced-issue-labeler.yml
+++ b/.github/advanced-issue-labeler.yml
@@ -25,6 +25,8 @@ policy:
             keys: ['Sentinel']
           - name: 'Terraform CE'
             keys: ['Terraform']
+          - name: 'Vagrant'
+            keys: ['Vagrant'] 
           - name: 'Vault'
             keys: ['Vault'] 
           - name: 'WAF'
