--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -13,6 +13,7 @@ body:
       label: Product
       description: What documentation is this for?
       options:
+        - Select a product
         - Boundary
         - Consul
         - HCP
@@ -26,7 +27,7 @@ body:
       default: 0
     validations:
       required: true
-  - type: textarea
+  - type: input
     id: which-page
     attributes:
       label: Which page?
@@ -41,6 +42,6 @@ body:
       label: What is the issue?
       description: Describe the issue - what content is incorrect? 
       placeholder: Tell us what you see!
-      value: "Something is not quite right with the content...
+      value: "Something is not quite right with the content..."
     validations:
       required: true
