--- a/.github/advanced-issue-labeler.yml
+++ b/.github/advanced-issue-labeler.yml
@@ -10,7 +10,6 @@ policy:
   - template: [ bug-report.yml, feature-request.yml]
     section:
       - id: [product]
-        block-list: ['Select a product']
         label:
           - name: 'Boundary'
             keys: ['Boundary']
@@ -32,4 +31,6 @@ policy:
             keys: ['Vault'] 
           - name: 'WAF'
             keys: ['Well-Architected Framework']
+          - name: 'Triage'
+            keys: ['None', 'Other']
    
