--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -12,7 +12,6 @@ body:
       label: Product
       description: What documentation is this for?
       options:
-        - Select a product
         - Boundary
         - Consul
         - HCP
@@ -23,6 +22,8 @@ body:
         - Vagrant
         - Vault
         - Well-Architected Framework
+        - None
+        - Other
       default: 6
     validations:
       required: true
