--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -20,7 +20,7 @@ contact_links:
      about: Create a Terraform docs issue in the Terraform repository.
    - name: Vagrant docs issue
      url: https://github.com/hashicorp/vagrant/issues
-     about: Create a Terraform docs issue in the Terraform repository.
+     about: Create a Vagrant docs issue in the Vagrant repository.
    - name: Vault docs issue
      url: https://github.com/hashicorp/vaultissues
      about: Create a Vault docs issue in the Vault repository.
