--- a/.github/ISSUE_TEMPLATE/docs.yml
+++ b/.github/ISSUE_TEMPLATE/docs.yml
@@ -6,7 +6,11 @@ body:
   - type: markdown
     attributes:
       value: |
-        Create a descriptive title.
+        Use this form to create a docs issue for HCP Waypoint, Sentinel,
+        Well-Architected Framework, and HashiCorp Cloud Platform
+        (Admin/CLI/IAM/Network/Security). Create docs issues for all other
+        products in the product's repository. On this form, click the **Cancel** button to close this window. Then click
+        the **New Issue** button. Finally, click the link to the desired product repository.
   - type: dropdown
     id: product
     attributes:
@@ -14,7 +18,7 @@ body:
       description: |-
         What product content is this for? If you do not see your product in the
         pick list, click the **Cancel** button to close this window. Then click
-        the **New Issue** button. Finally, click the link to the correct product repository.
+        the **New Issue** button again. Finally, click the link to the correct product repository.
       options:
         - HashiCorp Cloud Platform     
         - HCP CLI
@@ -30,7 +34,8 @@ body:
     id: what
     attributes:
       label: |-
-        What content updates would you like us to do? Be specific and provide as much detail as possible.
+        What content updates would you like us to do? Be specific and provide as
+        much detail as possible. Include specific page URLs.
       description: 
       placeholder: Please document how to... 
       value: "Please document how to..."
