--- a/.github/ISSUE_TEMPLATE/docs.yml
+++ b/.github/ISSUE_TEMPLATE/docs.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       value: |
         Use this form to create a docs issue for HCP Waypoint, Sentinel, Well-Architected Framework, and HashiCorp Cloud Platform (Admin, CLI, IAM, Network, Security sections). 
-        Create docs issues for all other products in the product's repository. 
+        **Create docs issues for all other products in the product's repository.** 
         On this form, click the **Cancel** button to close this window. Then click the **New Issue** button in the GitHub web UI. Finally, click the link to the desired product repository.
   - type: dropdown
     id: product
