--- a/.github/ISSUE_TEMPLATE/docs.yml
+++ b/.github/ISSUE_TEMPLATE/docs.yml
@@ -1,6 +1,6 @@
 name: Documentation Issue
 description: |-
-  HCP Waypoint, Sentinel, Well-Architected Framework, HashiCorp Cloud Platform (Admin, CLI, IAM, Network, Security sections)
+  HashiCorp Product Documentation Issue
 title: "[Content Request]: "
 body:
   - type: markdown
